# fang

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml
.github/workflows/: ci-cd.yml  ci.yml  release.yml
docs/: index.html
src/: config.rs  main.rs
src/app/: actions.rs  events.rs  keybindings.rs  mod.rs  palette.rs  state.rs
src/commands/: ai.rs  clipboard.rs  git.rs  make.rs  mod.rs  open.rs  shell.rs  title.rs
src/fs/: browser.rs  metadata.rs  mod.rs
src/preview/: binary.rs  images.rs  loader.rs  makefile.rs  markdown.rs  mod.rs  text.rs
src/search/: fuzzy.rs  mod.rs
src/ui/: layout.rs  mod.rs  render.rs  utils.rs
src/ui/components/: ai_modal.rs  ai_panel.rs  command_palette.rs  file_list.rs  footer.rs  git_form.rs  git_modal.rs  header.rs  help.rs  make_modal.rs  make_panel.rs  mod.rs  preview.rs  preview_pane.rs  settings_modal.rs  sidebar.rs
