[package]
name = "fang"
version = "0.3.0"
edition = "2021"
description = "A modern terminal file explorer"
license = "MIT"

[[bin]]
name = "fang"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
fuzzy-matcher = "0.3.7"
anyhow = "1"
thiserror = "2"
libc = "0.2"
pulldown-cmark = { version = "0.12", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
